--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Webデザイナーヤマダハナコ ポートフォリオ">
+  <meta property="og:title" content="shibatasuguru0311 ポートフォリオ">
   <meta property="og:url" content="URL入る">
-  <meta property="og:description" content="Webデザイナーヤマダハナコのポートフォリオです。">
+  <meta property="og:description" content="shibatasuguru0311のポートフォリオです。">
   <meta property="og:image" content="img/ogp.png">
-  <meta name="description" content="Webデザイナーヤマダハナコのポートフォリオです。">
-  <title>Webデザイナーヤマダハナコ ポートフォリオ</title>
+  <meta name="description" content="shibatasuguru0311のポートフォリオです。">
+  <title>シバタスグル ポートフォリオ</title>
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond&amp;display=swap" rel="stylesheet">
   <link href="css/reset.css" media="all" rel="stylesheet" type="text/css">
@@ -23,9 +23,9 @@
     <!-- .header -->
     <header class="header">
       <h1 class="logo">
-        <span class="logo-name">Hanako Yamada’s</span>
+        <!-- <span class="logo-name">Hanako Yamada’s</span> -->
         <span class="logo-title">PORTFOLIO</span>
-        <span class="logo-text">Webデザイナー ヤマダハナコ</span>
+        <span class="logo-text">SHIBATA SUGURU</span>
       </h1>
     </header>
     <!-- /.header -->
@@ -35,7 +35,7 @@
       <ul class="gnav-list">
         <li class="gnav-item"><a class="gnav-link" href="#feature-section">FEATURE</a></li>
         <li class="gnav-item"><a class="gnav-link" href="#works-section">WORKS</a></li>
-        <li class="gnav-item"><a class="gnav-link" href="#about-section">ABOUT</a></li>
+        <li class="gnav-item"><a class="gnav-link" href="#about-section">PROFILE</a></li>
         <li class="gnav-item"><a class="gnav-link" href="#skill-section">SKILL</a></li>
         <li class="gnav-item"><a class="gnav-link" href="#contact-section">CONTACT</a></li>
       </ul>
@@ -93,9 +93,9 @@
                   <img class="works-image fadein lazyloaded" src="img/works/thumb/thumb_work01.jpg" data-src="img/works/company.jpg" alt="">
                 </a>
                 <figcaption class="works-body">
-                  <div class="works-title">作品タイトル</div>
-                  <div class="works-text">Design / Coding(Responsive) / WordPress</div>
-                  <div class="works-url"><a class="works-url-link" href="#" target="_blank">Link</a>
+                  <div class="works-title">WORKSHOP MATCHING APP</div>
+                  <div class="works-text">Ruby / Ruby on rails / Heroku</div>
+                  <div class="works-url"><a class="works-url-link" href="https://workshop-matching-app.herokuapp.com/" target="_blank">Link</a>
                   </div>
                 </figcaption>
               </figure>
@@ -104,9 +104,9 @@
                   <img class="works-image fadein lazyloaded" src="img/works/thumb/thumb_work02.jpg" data-src="img/works/company.jpg" alt="">
                 </a>
                 <figcaption class="works-body">
-                  <div class="works-title">作品タイトル</div>
-                  <div class="works-text">WordPress</div>
-                  <div class="works-url"><a class="works-url-link" href="#" target="_blank">Link</a>
+                  <div class="works-title">FoundMuji APP</div>
+                  <div class="works-text">Ruby / Ruby on rails / Heroku</div>
+                  <div class="works-url"><a class="works-url-link" href="https://foundmuji-app.herokuapp.com/shops/sign_in" target="_blank">Link</a>
                   </div>
                 </figcaption>
               </figure>
@@ -115,8 +115,8 @@
                   <img class="works-image fadein lazyloaded" src="img/works/thumb/thumb_work03.jpg" data-src="img/works/company.jpg" alt="">
                 </a>
                 <figcaption class="works-body">
-                  <div class="works-title">作品タイトル</div>
-                  <div class="works-text">Design</div>
+                  <div class="works-title">TO DO APP</div>
+                  <div class="works-text">PHP</div>
                 </figcaption>
               </figure>
               <figure class="works-item">
@@ -124,9 +124,9 @@
                   <img class="works-image fadein lazyloaded" src="img/works/thumb/thumb_work04.jpg" data-src="img/works/company.jpg" alt="">
                 </a>
                 <figcaption class="works-body">
-                  <div class="works-title">作品タイトル</div>
-                  <div class="works-text">Coding</div>
-                  <div class="works-url"><a class="works-url-link" href="#" target="_blank">Link</a>
+                  <div class="works-title">フリマアプリ</div>
+                  <div class="works-text">Ruby / Ruby on rails / Javascript / Heroku</div>
+                  <div class="works-url"><a class="works-url-link" href="http://54.95.64.121/" target="_blank">Link</a>
                   </div>
                 </figcaption>
               </figure>
@@ -135,9 +135,9 @@
                   <img class="works-image fadein lazyloaded" src="img/works/thumb/thumb_work05.jpg" data-src="img/works/company.jpg" alt="">
                 </a>
                 <figcaption class="works-body">
-                  <div class="works-title">作品タイトル</div>
-                  <div class="works-text">Coding</div>
-                  <div class="works-url"><a class="works-url-link" href="#" target="_blank">Link</a>
+                  <div class="works-title">CHAT SPACE</div>
+                  <div class="works-text">Ruby / Ruby on rails / Javascript / AWS</div>
+                  <div class="works-url"><a class="works-url-link" href="18.180.211.4" target="_blank">Link</a>
                   </div>
                 </figcaption>
               </figure>
@@ -146,7 +146,7 @@
                   <img class="works-image fadein lazyloaded" src="img/works/thumb/thumb_work05.jpg" data-src="img/works/company.jpg" alt="">
                 </a>
                 <figcaption class="works-body">
-                  <div class="works-title">作品タイトル</div>
+                  <div class="works-title">作成予定</div>
                   <div class="works-text">Coding</div>
                 </figcaption>
               </figure>
@@ -161,11 +161,11 @@
       <section class="about-section section" id="about-section">
         <div class="inner">
           <div class="section-heading">
-            <h2 class="heading-primary">ABOUT</h2>
+            <h2 class="heading-primary">PROFILE</h2>
           </div>
           <div class="section-lead">
             <p>
-              こんにちは！ヤマダハナコと申します。
+              こんにちは、柴田卓（シバタスグル）と申します。
             </p>
           </div>
           <div class="section-body about">
@@ -174,10 +174,11 @@
                 <img class="about-image" src="img/profile/profile.png" alt=""></div>
               <div class="about-body">
                 <p>
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                  2008年4月から2020年5月まで、株式会社プロジェクトファイブという会社で無印良品店舗の店長として勤務をしておりました。<br>新型コロナウィルスが流行ったタイミングで、これからの人生を考えることが非常に多くなりました。その中で、自分自身の市場価値をあげたいという想い、また以前から憧れていたプログラミングに挑戦することに決めました。
+
                 </p>
                 <p>
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト&gt;テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                  年齢のこともあり、効率的に学習を進めるべくテックキャンプに通い、卒業後の現在も学習を継続しております。自分自身の作成した物や、関わった物で社会や人々をワクワクさせたり、効率化させたりできるエンジニアになりたいです。
                 </p>
               </div>
             </div>
@@ -206,10 +207,10 @@
                 <div class="skill-body">
                   <h3 class="skill-title">HTML5/CSS3</h3>
                   <div class="skill-rating rating">
-                    <div class="rate rate4"></div>
+                    <div class="rate rate2"></div>
                   </div>
                   <p>
-                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    書籍とprogateで学習をし、その後スクールで学習をしました。HamlやSCSSも使用できます。</p>
                 </div>
               </div>
               <div class="skill-item">
@@ -217,12 +218,13 @@
                   <img class="skill-image" src="img/skill/icon_skill.png" alt="">
                 </div>
                 <div class="skill-body">
-                  <h3 class="skill-title">JavaScript</h3>
+                  <h3 class="skill-title">Ruby</h3>
                   <div class="skill-rating rating">
                     <div class="rate rate3"></div>
                   </div>
                   <p>
-                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    progateとスクールで学習をしました（一部書籍でも学習）。プログラミング初心者におすすめと言われていた為Rubyを初めて学ぶ言語として選択しました。繰り返し勉強することで、少しずつコツが掴めてきました。
+                    </p>
                 </div>
               </div>
               <div class="skill-item">
@@ -230,12 +232,12 @@
                   <img class="skill-image" src="img/skill/icon_skill.png" alt="">
                 </div>
                 <div class="skill-body">
-                  <h3 class="skill-title">WordPress</h3>
+                  <h3 class="skill-title">Ruby on rails</h3>
                   <div class="skill-rating rating">
-                    <div class="rate rate4"></div>
+                    <div class="rate rate3"></div>
                   </div>
                   <p>
-                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    progateとスクールで学習しました。オリジナルアプリも２つ制作しました。アプリを作成していく中で、少しずつ理解が深まってきました。</p>
                 </div>
               </div>
 
@@ -244,12 +246,12 @@
                   <img class="skill-image" src="img/skill/icon_skill.png" alt="">
                 </div>
                 <div class="skill-body">
-                  <h3 class="skill-title">Photoshop</h3>
+                  <h3 class="skill-title">PHP</h3>
                   <div class="skill-rating rating">
-                    <div class="rate rate4"></div>
+                    <div class="rate rate1"></div>
                   </div>
                   <p>
-                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    スクール卒業後、就職活動をする中でRubyよりもPHPを推進する声が多く学習をはじめました。Udemyの講座を購入し学習しております。</p>
                 </div>
               </div>
 
@@ -258,12 +260,12 @@
                   <img class="skill-image" src="img/skill/icon_skill.png" alt="">
                 </div>
                 <div class="skill-body">
-                  <h3 class="skill-title">Illustrator</h3>
+                  <h3 class="skill-title">Javascripts</h3>
                   <div class="skill-rating rating">
-                    <div class="rate rate3"></div>
+                    <div class="rate rate1"></div>
                   </div>
                   <p>
-                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    まだまだ勉強不足の言語です。スクールで学習をしましたが、大枠を掴めた程度に収まっています。</p>
                 </div>
               </div>
 
@@ -272,12 +274,12 @@
                   <img class="skill-image" src="img/skill/icon_skill.png" alt="">
                 </div>
                 <div class="skill-body">
-                  <h3 class="skill-title">XD</h3>
+                  <h3 class="skill-title">インフラ</h3>
                   <div class="skill-rating rating">
-                    <div class="rate rate3"></div>
+                    <div class="rate rate1"></div>
                   </div>
                   <p>
-                    テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    インフラにも興味を持っており、現在書籍で学習を続けております。３分間ネットワーキング基礎講座、サーバの基本を読み進めています。</p>
                 </div>
               </div>
             </div>
@@ -304,11 +306,11 @@
                   <span class="contact-name">フォーム</span></a>
               </li>
               <li class="contact-item">
-                <a class="contact-image-wrapper" href="#" target="_blank"><img class="contact-image" src="img/contact/icon_contact.png" alt="">
+                <a class="contact-image-wrapper" href="https://twitter.com/RamenCurrySushi" target="_blank"><img class="contact-image" src="img/contact/icon_contact.png" alt="">
                   <span class="contact-name">Twitter</span></a>
               </li>
             </ul>
-            <div class="contact-text">xxxxxx@gmail.com</div>
+            <div class="contact-text">n79.shibata.suguru@gmail.com</div>
           </div>
         </div>
       </section>
@@ -322,7 +324,7 @@
         トップへもどる
       </div>
       <div class="inner">
-        <p class="copyright">Copyright©Hanako Yamada. All Rights Reserved.</p>
+        <p class="copyright">Copyright©Suguru Shibata. All Rights Reserved.</p>
       </div>
     </footer>
     <!-- /.footer -->
