--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <h2 class="heading-primary">FEATURE</h2>
           </div>
           <p class="section-lead">
-            最新の制作実績です。
+            最新の制作物です。
           </p>
           <div class="section-body feature">
             <div class="feature-item">
@@ -60,15 +60,15 @@
               </div>
               <div class="feature-body">
                 <p>
-                  作品タイトル：<br>●●●●● <a href="#">http://●●●.com</a></p>
-                <p>担当：<br>
-                  Design / Coding / WordPress
-                </p><p>制作期間：<br>●ヶ月</p>
+                  作品タイトル：<br>WORKSHOP MATCHING APP <a href="https://workshop-matching-app.herokuapp.com/">https://workshop-matching-app.herokuapp.com/</a></p>
+                <p>開発環境：<br>
+                  Ruby / Ruby on Rails  / MySQL / Github / Heroku /  Visual Studio Code 
+                </p><p>制作期間：<br>約３週間</p>
                 <p></p>
                 <p> コメント：<br>
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                  スクール卒業後に作成したアプリです。卒業後も学習を継続させる為、以前から作成したかったマッチングアプリを作成しデプロイまで着地をしました。</p>
                 <p>
-                  テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+                  こだわった部分は、フォロー機能とDM機能です。また、kaminari Gemを使用してみたかったこともあり、ページネージョン機能も付け加えております。初めて作成した無印のアプリではテストやエラーハンドリングができていなかった為、今回のアプリではそこも重点を置いて作成しました。繰り返しアプリを作成することで少しずつ理解が深まっていくのを感じております。
                 </p>
               </div>
             </div>
