--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </div>
               <div class="feature-body">
                 <p>
-                  作品タイトル：<br>WORKSHOP MATCHING APP <a href="https://workshop-matching-app.herokuapp.com/">https://workshop-matching-app.herokuapp.com/</a></p>
+                  作品タイトル：<br>WORKSHOP MATCHING APP <br><a href="https://workshop-matching-app.herokuapp.com/">https://workshop-matching-app.herokuapp.com/</a></p>
                 <p>開発環境：<br>
                   Ruby / Ruby on Rails  / MySQL / Github / Heroku /  Visual Studio Code 
                 </p><p>制作期間：<br>約３週間</p>
