--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <section class="works-section section" id="works-section">
         <div class="inner">
           <div class="section-heading">
-            <h2 class="heading-primary">Works</h2>
+            <h2 class="heading-primary">WORKS</h2>
           </div>
           <p class="section-lead">
             これまでの制作実績です。
