--- a/index.html
+++ b/index.html
@@ -296,14 +296,14 @@
           </div>
           <div class="section-lead">
             <p>
-              お問合わせは下記のフォームか<br class="sp-only">SNSからご連絡をください。
+              お問合わせは下記のメールアドレスか<br class="sp-only">SNSからご連絡をください。
             </p>
           </div>
           <div class="section-body contact">
             <ul class="contact-list">
               <li class="contact-item">
-                <a class="contact-image-wrapper" href="#" target="_blank"><img class="contact-image" src="img/contact/icon_contact.png" alt="">
-                  <span class="contact-name">フォーム</span></a>
+                <a class="contact-image-wrapper" href="https://github.com/shibatasuguru0311" target="_blank"><img class="contact-image" src="img/contact/icon_contact.png" alt="">
+                  <span class="contact-name">GitHub</span></a>
               </li>
               <li class="contact-item">
                 <a class="contact-image-wrapper" href="https://twitter.com/RamenCurrySushi" target="_blank"><img class="contact-image" src="img/contact/icon_contact.png" alt="">
