--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </figcaption>
               </figure>
               <figure class="works-item">
-                <a href="img/works/work05.jpg" data-size="980x668" class="works-link works-image-wrapper hover-action">
+                <a href="img/works/work06.jpg" data-size="980x668" class="works-link works-image-wrapper hover-action">
                   <img class="works-image fadein lazyloaded" src="img/works/thumb/thumb_work05.jpg" data-src="img/works/company.jpg" alt="">
                 </a>
                 <figcaption class="works-body">
@@ -202,7 +202,7 @@
             <div class="skill-list">
               <div class="skill-item">
                 <div class="skill-image-wrapper">
-                  <img class="skill-image" src="img/skill/icon_skill.png" alt="">
+                  <img class="skill-image" src="img/skill/skill1.png" alt="">
                 </div>
                 <div class="skill-body">
                   <h3 class="skill-title">HTML5/CSS3</h3>
@@ -215,7 +215,7 @@
               </div>
               <div class="skill-item">
                 <div class="skill-image-wrapper">
-                  <img class="skill-image" src="img/skill/icon_skill.png" alt="">
+                  <img class="skill-image" src="img/skill/skill2.png" alt="">
                 </div>
                 <div class="skill-body">
                   <h3 class="skill-title">Ruby</h3>
@@ -229,7 +229,7 @@
               </div>
               <div class="skill-item">
                 <div class="skill-image-wrapper">
-                  <img class="skill-image" src="img/skill/icon_skill.png" alt="">
+                  <img class="skill-image" src="img/skill/skill2.png" alt="">
                 </div>
                 <div class="skill-body">
                   <h3 class="skill-title">Ruby on rails</h3>
@@ -243,7 +243,7 @@
 
               <div class="skill-item">
                 <div class="skill-image-wrapper">
-                  <img class="skill-image" src="img/skill/icon_skill.png" alt="">
+                  <img class="skill-image" src="img/skill/skill3.png" alt="">
                 </div>
                 <div class="skill-body">
                   <h3 class="skill-title">PHP</h3>
@@ -257,7 +257,7 @@
 
               <div class="skill-item">
                 <div class="skill-image-wrapper">
-                  <img class="skill-image" src="img/skill/icon_skill.png" alt="">
+                  <img class="skill-image" src="img/skill/skill4.png" alt="">
                 </div>
                 <div class="skill-body">
                   <h3 class="skill-title">Javascripts</h3>
@@ -271,7 +271,7 @@
 
               <div class="skill-item">
                 <div class="skill-image-wrapper">
-                  <img class="skill-image" src="img/skill/icon_skill.png" alt="">
+                  <img class="skill-image" src="img/skill/skill5.png" alt="">
                 </div>
                 <div class="skill-body">
                   <h3 class="skill-title">インフラ</h3>
