--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                   <span class="contact-name">GitHub</span></a>
               </li>
               <li class="contact-item">
-                <a class="contact-image-wrapper" href="https://twitter.com/RamenCurrySushi" target="_blank"><img class="contact-image" src="img/contact/icon_contact.png" alt="">
+                <a class="contact-image-wrapper" href="https://twitter.com/RamenCurrySushi" target="_blank"><i class="fab fa-twitter-square"></i>
                   <span class="contact-name">Twitter</span></a>
               </li>
             </ul>
