--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@
           <div class="section-body contact">
             <ul class="contact-list">
               <li class="contact-item">
-                <a class="contact-image-wrapper" href="https://github.com/shibatasuguru0311" target="_blank"><img class="contact-image" src="img/contact/icon_contact.png" alt="">
+                <a class="contact-image-wrapper" href="https://github.com/shibatasuguru0311" target="_blank"><img class="contact-image" src="img/contact/icon_contact1.png" alt="">
                   <span class="contact-name">GitHub</span></a>
               </li>
               <li class="contact-item">
-                <a class="contact-image-wrapper" href="https://twitter.com/RamenCurrySushi" target="_blank"><i class="fab fa-twitter-square"></i>
+                <a class="contact-image-wrapper" href="https://twitter.com/RamenCurrySushi" target="_blank"><img class="contact-image" src="img/contact/icon_contact2.png" alt="">
                   <span class="contact-name">Twitter</span></a>
               </li>
             </ul>
