--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
     <!-- .gnav -->
     <nav class="gnav">
       <ul class="gnav-list">
+        <li class="gnav-item"><a class="gnav-link" href="#about-section">PROFILE</a></li>
         <li class="gnav-item"><a class="gnav-link" href="#feature-section">FEATURE</a></li>
         <li class="gnav-item"><a class="gnav-link" href="#works-section">WORKS</a></li>
-        <li class="gnav-item"><a class="gnav-link" href="#about-section">PROFILE</a></li>
         <li class="gnav-item"><a class="gnav-link" href="#skill-section">SKILL</a></li>
         <li class="gnav-item"><a class="gnav-link" href="#contact-section">CONTACT</a></li>
       </ul>
@@ -43,6 +43,38 @@
     <!-- /.gnav -->
 
     <main class="content">
+
+
+      <!-- .about-secion -->
+      <section class="about-section section" id="about-section">
+        <div class="inner">
+          <div class="section-heading">
+            <h2 class="heading-primary">PROFILE</h2>
+          </div>
+          <div class="section-lead">
+            <p>
+              こんにちは、柴田卓（シバタスグル）と申します。
+            </p>
+          </div>
+          <div class="section-body about">
+            <div class="about-item">
+              <div class="about-image-wrapper">
+                <img class="about-image" src="img/profile/profile.png" alt=""></div>
+              <div class="about-body">
+                <p>
+                  2008年4月から2020年5月まで、株式会社プロジェクトファイブという会社で無印良品店舗の店長として勤務をしておりました。<br>新型コロナウィルスが流行ったタイミングで、これからの人生を考えることが非常に多くなりました。その中で、自分自身の市場価値をあげたいという想い、また以前から憧れていたプログラミングに挑戦することに決めました。
+
+                </p>
+                <p>
+                  年齢のこともあり、効率的に学習を進めるべくテックキャンプに通い、卒業後の現在も学習を継続しております。自分自身の作成した物や、関わった物で社会や人々をワクワクさせたり、効率化させたりできるエンジニアになりたいです。
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- /.about-secion -->
+
 
       <!-- .feature-section -->
       <section class="feature-section section" id="feature-section">
@@ -137,7 +169,7 @@
                 <figcaption class="works-body">
                   <div class="works-title">CHAT SPACE</div>
                   <div class="works-text">Ruby / Ruby on rails / Javascript / AWS</div>
-                  <div class="works-url"><a class="works-url-link" href="18.180.211.4" target="_blank">Link</a>
+                  <!-- <div class="works-url"><a class="works-url-link" href="18.180.211.4" target="_blank">Link</a> -->
                   </div>
                 </figcaption>
               </figure>
@@ -156,36 +188,6 @@
         </div>
       </section>
       <!-- /.works-secion -->
-
-      <!-- .about-secion -->
-      <section class="about-section section" id="about-section">
-        <div class="inner">
-          <div class="section-heading">
-            <h2 class="heading-primary">PROFILE</h2>
-          </div>
-          <div class="section-lead">
-            <p>
-              こんにちは、柴田卓（シバタスグル）と申します。
-            </p>
-          </div>
-          <div class="section-body about">
-            <div class="about-item">
-              <div class="about-image-wrapper">
-                <img class="about-image" src="img/profile/profile.png" alt=""></div>
-              <div class="about-body">
-                <p>
-                  2008年4月から2020年5月まで、株式会社プロジェクトファイブという会社で無印良品店舗の店長として勤務をしておりました。<br>新型コロナウィルスが流行ったタイミングで、これからの人生を考えることが非常に多くなりました。その中で、自分自身の市場価値をあげたいという想い、また以前から憧れていたプログラミングに挑戦することに決めました。
-
-                </p>
-                <p>
-                  年齢のこともあり、効率的に学習を進めるべくテックキャンプに通い、卒業後の現在も学習を継続しております。自分自身の作成した物や、関わった物で社会や人々をワクワクさせたり、効率化させたりできるエンジニアになりたいです。
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- /.about-secion -->
 
       <!-- .skill-secion -->
       <section class="skill-section section" id="skill-section">
