--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                   </div>
                 </figcaption>
               </figure>
-              <figure class="works-item">
+              <!-- <figure class="works-item">
                 <a href="img/works/work06.jpg" data-size="980x668" class="works-link works-image-wrapper hover-action">
                   <img class="works-image fadein lazyloaded" src="img/works/thumb/thumb_work05.jpg" data-src="img/works/company.jpg" alt="">
                 </a>
@@ -181,7 +181,7 @@
                   <div class="works-title">作成予定</div>
                   <div class="works-text">Coding</div>
                 </figcaption>
-              </figure>
+              </figure> -->
 
             </div>
           </div>
