--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
           <div class="section-lead">
             <p>
-              こんにちは、柴田卓（シバタスグル）と申します。
+              柴田卓（しばたすぐる）1985/3/11(35歳)
             </p>
           </div>
           <div class="section-body about">
@@ -61,13 +61,40 @@
               <div class="about-image-wrapper">
                 <img class="about-image" src="img/profile/profile.png" alt=""></div>
               <div class="about-body">
+                <h4>経歴</h4>
                 <p>
-                  2008年4月から2020年5月まで、株式会社プロジェクトファイブという会社で無印良品店舗の店長として勤務をしておりました。<br>新型コロナウィルスが流行ったタイミングで、これからの人生を考えることが非常に多くなりました。その中で、自分自身の市場価値をあげたいという想い、また以前から憧れていたプログラミングに挑戦することに決めました。
+                  ・2008年3月　愛知大学文学部社会学科社会学卒業<br>
+                  ・2008年4月　株式会社プロジェクトファイブ無印良品事業部入社<br>
+                  ・2020年5月　株式会社プロジェクトファイブ無印良品事業部退社<br>
+                  ・2020年6月　テックキャンプ エンジニア転職入会<b>
+                  ・2020年8月　テックキャンプ エンジニア転職卒業</b>
+                  ・現在転職活動中
+                </p>
+                <p>
+                  初めての新卒採用を行う会社で、これから大きく盛り上げていく雰囲気と、働く社員の熱意に惹かれ入社を決意しました。<br>
+                  入社5年目からは店長職としてマネジメント業務に携わり、その年は店舗のリニューアルオープンも経験しました。<br>
+                  店長として着任した店舗では異動前と比べ、４年間で年間売り上げを<b>１億円伸長させることができました。</b><br>
+                  店舗の強みである商品群を確認し、売り込んだ結果ではありますが、上司からはスタッフとのコミュニケーションを取り信頼関係を築いたことへの評価もいただいておりました。<br>
+                  私の強みはチームワークで物事を進めていく行動力だと考え、仕事をする上で大事にしてきました。
+                </p>
+                <p>
+                  新型コロナウィルスが流行ったタイミングで、これからの人生を考えることが非常に多くなりました。その中で、自分自身の市場価値をあげたいという想いを持つようになりました。前職の仕事もやりがいを感じ、好きな仕事でした。しかし年齢も重ね、今挑戦しないと後悔するといった想いが強くなり以前から憧れていたエンジニアへの転職を決意しました。
+                  年齢がネックではあったので、少しでも効率的に学習を進めるべくテックキャンプに通い、卒業後の現在も学習を継続しております。<b>自分自身の作成した物や、関わった物で社会や人々をワクワクさせたり、効率化させたりできるエンジニアになりたいです。</b>
+                </p>
+                <h4>学習したプログラミングスキル</h4>
+                <p>
+                  5月10日〜5月20日(11日間): HTML, CSS<br>
+                  5月21日〜6月 6日(16日間): Ruby, Ruby on Rails<br>
+                  6月 7日〜8月18日(70日間): Ruby on Railsをメインに、Git, JavaScripts, jQuery, AWS, 単体テスト, Haml , SCSS<br>
+                  6月19日〜現在: Ruby on Rails、PHP、インフラを学習中<br>
+                  学習しなかった日は7日間程、<b>ほぼ毎日学習を継続しております。</b>
+                </p>
+                <h4>どのようなエンジニアになりたいか</h4>
+                <p>
+                  最終目標は、フルスタックエンジニアです。<br>
+                  なので、コーディングもでき、インフラも対応できるエンジニアになりたいです。<br>
+                </p>
 
-                </p>
-                <p>
-                  年齢のこともあり、効率的に学習を進めるべくテックキャンプに通い、卒業後の現在も学習を継続しております。自分自身の作成した物や、関わった物で社会や人々をワクワクさせたり、効率化させたりできるエンジニアになりたいです。
-                </p>
               </div>
             </div>
           </div>
