--- a/index.html
+++ b/index.html
@@ -61,39 +61,46 @@
               <div class="about-image-wrapper">
                 <img class="about-image" src="img/profile/profile.png" alt=""></div>
               <div class="about-body">
-                <h4>経歴</h4>
+                <h3>経歴</h3>
                 <p>
                   ・2008年3月　愛知大学文学部社会学科社会学卒業<br>
                   ・2008年4月　株式会社プロジェクトファイブ無印良品事業部入社<br>
                   ・2020年5月　株式会社プロジェクトファイブ無印良品事業部退社<br>
-                  ・2020年6月　テックキャンプ エンジニア転職入会<b>
+                  ・2020年6月　テックキャンプ エンジニア転職入会<br>
                   ・2020年8月　テックキャンプ エンジニア転職卒業</b>
                   ・現在転職活動中
                 </p>
+                <br>
                 <p>
-                  初めての新卒採用を行う会社で、これから大きく盛り上げていく雰囲気と、働く社員の熱意に惹かれ入社を決意しました。<br>
-                  入社5年目からは店長職としてマネジメント業務に携わり、その年は店舗のリニューアルオープンも経験しました。<br>
+                  初めて新卒採用を行う会社で、これから大きく盛り上げていく雰囲気と、働く社員の熱意に惹かれ新卒第一期生として入社を決意しました。<br>
+                  入社5年目からは店長職としてマネジメント業務に携わり、その年は店舗のリニューアルオープンも経験しました。
                   店長として着任した店舗では異動前と比べ、４年間で年間売り上げを<b>１億円伸長させることができました。</b><br>
-                  店舗の強みである商品群を確認し、売り込んだ結果ではありますが、上司からはスタッフとのコミュニケーションを取り信頼関係を築いたことへの評価もいただいておりました。<br>
+                  課題解決をその都度行った結果ではありますが、それだけではなく、上司からはスタッフとのコミュニケーションを取り信頼関係を築いたことへの評価もいただいておりました。<br>
                   私の強みはチームワークで物事を進めていく行動力だと考え、仕事をする上で大事にしてきました。
                 </p>
                 <p>
-                  新型コロナウィルスが流行ったタイミングで、これからの人生を考えることが非常に多くなりました。その中で、自分自身の市場価値をあげたいという想いを持つようになりました。前職の仕事もやりがいを感じ、好きな仕事でした。しかし年齢も重ね、今挑戦しないと後悔するといった想いが強くなり以前から憧れていたエンジニアへの転職を決意しました。
+                  新型コロナウィルスが流行ったタイミングで、これからの人生を考えることが非常に多くなりました。その中で、自分自身の市場価値をあげたいという想いを持つようになりました。前職の仕事もやりがいを感じ、好きな仕事でした。しかし年齢を重ね、今挑戦しないと後悔するといった想いの方が強くなり以前から憧れていたエンジニアへの転職を決意しました。
                   年齢がネックではあったので、少しでも効率的に学習を進めるべくテックキャンプに通い、卒業後の現在も学習を継続しております。<b>自分自身の作成した物や、関わった物で社会や人々をワクワクさせたり、効率化させたりできるエンジニアになりたいです。</b>
                 </p>
-                <h4>学習したプログラミングスキル</h4>
+                <h3>学習したプログラミングスキル</h3>
                 <p>
                   5月10日〜5月20日(11日間): HTML, CSS<br>
                   5月21日〜6月 6日(16日間): Ruby, Ruby on Rails<br>
-                  6月 7日〜8月18日(70日間): Ruby on Railsをメインに、Git, JavaScripts, jQuery, AWS, 単体テスト, Haml , SCSS<br>
+                  6月 7日〜8月18日(70日間): Ruby on Railsメインに、Git, JavaScripts等<br>
                   6月19日〜現在: Ruby on Rails、PHP、インフラを学習中<br>
-                  学習しなかった日は7日間程、<b>ほぼ毎日学習を継続しております。</b>
+                  学習しなかった日は６日間、<b>ほぼ毎日学習を継続しております。</b>
                 </p>
-                <h4>どのようなエンジニアになりたいか</h4>
+                <h3>どのようなエンジニアになりたいか</h3>
                 <p>
                   最終目標は、フルスタックエンジニアです。<br>
                   なので、コーディングもでき、インフラも対応できるエンジニアになりたいです。<br>
                 </p>
+                <h3>好きな無印良品の商品</h3>
+                ・ヘクセンハウス：　お菓子の家です。毎年お菓子の家でジオラマを作成し、売上につなげました。<br>
+                ・フィットするソファ：　正月３が日で８０台販売（全国４位）しました。<br>
+                ・フレンチリネン：ワンピースやワイドパンツは打ち出す程に売り上げが伸長します。<br>
+                ・太番手半袖Tシャツ：紳士服を担当することが多かったのですが、売上に貢献してくれた商品です。<br>
+
 
               </div>
             </div>
