--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <div class="about-body">
                 <h3>経歴</h3>
                 <p>
-                  ・2008年3月　愛知大学文学部社会学科社会学卒業<br>
+                  ・2008年3月　愛知大学文学部社会学科社会学専攻卒業<br>
                   ・2008年4月　株式会社プロジェクトファイブ無印良品事業部入社<br>
                   ・2020年5月　株式会社プロジェクトファイブ無印良品事業部退社<br>
                   ・2020年6月　テックキャンプ エンジニア転職入会<br>
@@ -89,7 +89,7 @@
                   5月21日〜6月 6日(16日間): Ruby, Ruby on Rails<br>
                   6月 7日〜8月18日(70日間): Ruby on Railsメインに、Git, JavaScripts等<br>
                   6月19日〜現在: Ruby on Rails、PHP、インフラを学習中<br>
-                  学習しなかった日は６日間、<b>ほぼ毎日学習を継続しております。</b>
+                  学習しなかった日は６日で、<b>ほぼ毎日学習を継続しております。</b>
                 </p>
                 <br>
                 <h3>どのようなエンジニアになりたいか</h3>
@@ -115,7 +115,7 @@
             <h2 class="heading-primary">FEATURE</h2>
           </div>
           <p class="section-lead">
-            最新の制作物です。
+            最もこだわって作成した制作物です。
           </p>
           <div class="section-body feature">
             <div class="feature-item">
@@ -129,10 +129,19 @@
                   Ruby / Ruby on Rails  / MySQL / Github / Heroku /  Visual Studio Code 
                 </p><p>制作期間：<br>約３週間</p>
                 <p></p>
+                <p> 機能：<br>
+                  ・ワークショップ投稿機能<br>
+                  ・投稿の編集削除機能<br>
+                  ・フォロー機能<br>
+                  ・DM機能<br>
+                  ・ログイン機能<br>
+                  ・ページネーション機能
+                </p>
+                <p>
                 <p> コメント：<br>
                   スクール卒業後に作成したアプリです。卒業後も学習を継続させる為、以前から作成したかったマッチングアプリを作成しデプロイまで着地をしました。</p>
                 <p>
-                  こだわった部分は、フォロー機能とDM機能です。また、kaminari Gemを使用してみたかったこともあり、ページネージョン機能も付け加えております。初めて作成した無印のアプリではテストやエラーハンドリングができていなかった為、今回のアプリではそこも重点を置いて作成しました。繰り返しアプリを作成することで少しずつ理解が深まっていくのを感じております。
+                  学習してきたことを、自分の中に再度落とし込む意味でもイチから作成しました。ネットで確認しつつフォロー機能を取り付けたことがこだわった箇所です。何度かrailsで制作することで、理解が少しずつ深まっているのを感じます。
                 </p>
               </div>
             </div>
@@ -229,7 +238,7 @@
           </div>
           <div class="section-lead">
             <p>
-              未経験ですが頑張ります！
+              未経験ですがこれまで学習した言語をまとめました。
             </p>
           </div>
           <div class="section-body skill">
@@ -239,7 +248,7 @@
                   <img class="skill-image" src="img/skill/skill1.png" alt="">
                 </div>
                 <div class="skill-body">
-                  <h3 class="skill-title">HTML5/CSS3</h3>
+                  <h3 class="skill-title">HTML/CSS</h3>
                   <div class="skill-rating rating">
                     <div class="rate rate2"></div>
                   </div>
@@ -257,7 +266,8 @@
                     <div class="rate rate3"></div>
                   </div>
                   <p>
-                    progateとスクールで学習をしました（一部書籍でも学習）。プログラミング初心者におすすめと言われていた為Rubyを初めて学ぶ言語として選択しました。繰り返し勉強することで、少しずつコツが掴めてきました。
+                    プログラミング初心者におすすめと言われていた為Rubyを初めて学ぶ言語として選択しました。繰り返し勉強することで、少しずつ理解が深まってきました。<br>
+                    繰り返しや条件式などは難しく感じます。
                     </p>
                 </div>
               </div>
@@ -271,7 +281,8 @@
                     <div class="rate rate3"></div>
                   </div>
                   <p>
-                    progateとスクールで学習しました。オリジナルアプリも２つ制作しました。アプリを作成していく中で、少しずつ理解が深まってきました。</p>
+                    オリジナルアプリも２つ制作しました。アプリを作成していく中で、少しずつ理解が深まってきました。<br>
+                    MVCを理解することで、流れを掴むことはできています。</p>
                 </div>
               </div>
 
@@ -285,7 +296,8 @@
                     <div class="rate rate1"></div>
                   </div>
                   <p>
-                    スクール卒業後、就職活動をする中でRubyよりもPHPを推進する声が多く学習をはじめました。Udemyの講座を購入し学習しております。</p>
+                    スクール卒業後、就職活動をする中でRubyよりもPHPを推進する声が多く学習をはじめました。Udemyの講座を購入し学習しております。<br>
+                  卒業後、少しずつ知識を入れ込んでおります。</p>
                 </div>
               </div>
 
@@ -299,7 +311,7 @@
                     <div class="rate rate1"></div>
                   </div>
                   <p>
-                    まだまだ勉強不足の言語です。スクールで学習をしましたが、大枠を掴めた程度に収まっています。</p>
+                    スクールで学習をしましたが、大枠を掴めた程度に収まっています。</p>
                 </div>
               </div>
 
@@ -313,7 +325,8 @@
                     <div class="rate rate1"></div>
                   </div>
                   <p>
-                    インフラにも興味を持っており、現在書籍で学習を続けております。３分間ネットワーキング基礎講座、サーバの基本を読み進めています。</p>
+                    インフラにも興味を持っており、現在書籍で学習を続けております。３分間ネットワーク基礎講座を２周、サーバの基本を１周読み進めています。<br>
+                  またLinuxのコマンドも少しずつ学習しております。</p>
                 </div>
               </div>
             </div>
