--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <h2 class="heading-primary">WORKS</h2>
           </div>
           <p class="section-lead">
-            これまでの制作実績です。
+            これまでの制作物です。
           </p>
           <div class="section-body works">
             <div class="works-list js-my-gallery" data-pswp-uid="1">
@@ -170,6 +170,7 @@
                   <div class="works-text">Ruby / Ruby on rails / Heroku</div>
                   <div class="works-url"><a class="works-url-link" href="https://workshop-matching-app.herokuapp.com/" target="_blank">Link</a>
                   </div>
+                  <div class="works-text">※FEATUREで紹介しております。</div>
                 </figcaption>
               </figure>
               <figure class="works-item">
@@ -181,6 +182,8 @@
                   <div class="works-text">Ruby / Ruby on rails / Heroku</div>
                   <div class="works-url"><a class="works-url-link" href="https://foundmuji-app.herokuapp.com/shops/sign_in" target="_blank">Link</a>
                   </div>
+                  <div class="works-text">前職で、新人スタッフが商品知識を調べお客様応対に役立つことができるようなアプリを作成しました。<br>
+                  いいね機能といいねランキングを表示できるようにしました。</div>
                 </figcaption>
               </figure>
               <figure class="works-item">
@@ -190,6 +193,8 @@
                 <figcaption class="works-body">
                   <div class="works-title">TO DO APP</div>
                   <div class="works-text">PHP</div>
+                  <div class="works-url"><a class="works-url-link" href="https://github.com/shibatasuguru0311/todo-app" target="_blank">Source</a>
+                  <div class="works-text">PHP学習の為、TODOアプリを作成しました。投稿と削除機能をつけております。</div>
                 </figcaption>
               </figure>
               <figure class="works-item">
@@ -201,6 +206,7 @@
                   <div class="works-text">Ruby / Ruby on rails / Javascript / Heroku</div>
                   <div class="works-url"><a class="works-url-link" href="http://54.95.64.121/" target="_blank">Link</a>
                   </div>
+                  <div class="works-text">スクールでチーム開発を行いました。私はスクラムマスターを担当し、技術だけでなくチームで開発する際の配慮やまとめ方を学びました。</div>
                 </figcaption>
               </figure>
               <figure class="works-item">
@@ -210,8 +216,9 @@
                 <figcaption class="works-body">
                   <div class="works-title">CHAT SPACE</div>
                   <div class="works-text">Ruby / Ruby on rails / Javascript / AWS</div>
-                  <!-- <div class="works-url"><a class="works-url-link" href="18.180.211.4" target="_blank">Link</a> -->
+                  <div class="works-url"><a class="works-url-link" href="https://github.com/shibatasuguru0311/chat-space" target="_blank">Source</a>
                   </div>
+                  <div class="works-text">初めて、最初からデプロイまで着地できた開発物となります。スクールの学習用制作物です。</div>
                 </figcaption>
               </figure>
               <!-- <figure class="works-item">
