--- a/index.html
+++ b/index.html
@@ -72,14 +72,14 @@
                 </p>
                 <br>
                 <p>
-                  初めて新卒採用を行う会社で、これから大きく盛り上げていく雰囲気と、働く社員の熱意に惹かれ新卒第一期生として入社を決意しました。<br>
+                  新卒で入社した企業は、当時初めて新卒採用を行う会社で、これから大きく盛り上げていく雰囲気と働く社員の熱意に惹かれ新卒第一期生として入社を決意しました。<br>
                   入社5年目からは店長職としてマネジメント業務に携わり、その年は店舗のリニューアルオープンも経験しました。
-                  店長として着任した店舗では異動前と比べ、４年間で年間売り上げを<b>１億円伸長させることができました。</b><br>
+                  その後も店長として着任した店舗では異動前と比べ、４年間で年間売り上げを<b>１億円伸長させることができました。</b><br>
                   課題解決をその都度行った結果ではありますが、それだけではなく、上司からはスタッフとのコミュニケーションを取り信頼関係を築いたことへの評価もいただいておりました。<br>
                   私の強みはチームワークで物事を進めていく行動力だと考え、仕事をする上で大事にしてきました。
                 </p>
                 <p>
-                  新型コロナウィルスが流行ったタイミングで、これからの人生を考えることが非常に多くなりました。その中で、自分自身の市場価値をあげたいという想いを持つようになりました。前職の仕事もやりがいを感じ、好きな仕事でした。しかし年齢を重ね、今挑戦しないと後悔するといった想いの方が強くなり以前から憧れていたエンジニアへの転職を決意しました。
+                  新型コロナウィルスが流行ったタイミングで、これからの人生を考えることが多くなりました。その中で、自分自身の市場価値をあげたいという想いを持つようになりました。前職の仕事もやりがいを感じ、好きな仕事でした。しかし年齢を重ね、今挑戦しないと後悔するといった想いの方が強くなり以前から憧れていたエンジニアへの転職を決意しました。
                   年齢がネックではあったので、少しでも効率的に学習を進めるべくテックキャンプに通い、卒業後の現在も学習を継続しております。<b>自分自身の作成した物や、関わった物で社会や人々をワクワクさせたり、効率化させたりできるエンジニアになりたいです。</b>
                 </p>
                 <br>
@@ -94,8 +94,8 @@
                 <br>
                 <h3>どのようなエンジニアになりたいか</h3>
                 <p>
-                  最終目標は、フルスタックエンジニアです。<br>
-                  なので、コーディングもでき、インフラも対応できるエンジニアになりたいです。<br>
+                  最終目標は、人に喜んでもらうことのできるエンジニアです。<br>
+                  スペシャリストよりはゼネラリスト、また現在はプロジェクトマネージャーにも興味があります。<br>
                 </p>
 
 
