--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                   </div>
                   <p>
                     プログラミング初心者におすすめと言われていた為Rubyを初めて学ぶ言語として選択しました。繰り返し勉強することで、少しずつ理解が深まってきました。<br>
-                    繰り返しや条件式などは難しく感じます。
+                    現在も学習を継続中です。
                     </p>
                 </div>
               </div>
@@ -288,7 +288,7 @@
                     <div class="rate rate3"></div>
                   </div>
                   <p>
-                    オリジナルアプリも２つ制作しました。アプリを作成していく中で、少しずつ理解が深まってきました。<br>
+                    オリジナルアプリを２つ制作しました。アプリを作成していく中で、少しずつ理解が深めることができました。。<br>
                     MVCを理解することで、流れを掴むことはできています。</p>
                 </div>
               </div>
