--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     <div class="rate rate3"></div>
                   </div>
                   <p>
-                    プログラミング初心者におすすめと言われていた為Rubyを初めて学ぶ言語として選択しました。繰り返し勉強することで、少しずつ理解が深まってきました。<br>
+                    プログラミング初心者におすすめと言われていた為Rubyを初めて学ぶ言語として選択しました。繰り返し勉強することで、少しずつ理解が深まりました。<br>
                     現在も学習を継続中です。
                     </p>
                 </div>
@@ -288,7 +288,7 @@
                     <div class="rate rate3"></div>
                   </div>
                   <p>
-                    オリジナルアプリを２つ制作しました。アプリを作成していく中で、少しずつ理解が深めることができました。。<br>
+                    オリジナルアプリを２つ制作しました。アプリを作成していく中で、少しずつ理解が深めることができました。<br>
                     MVCを理解することで、流れを掴むことはできています。</p>
                 </div>
               </div>
