--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   5月21日〜6月 6日(16日間): Ruby, Ruby on Rails<br>
                   6月 7日〜8月18日(70日間): Ruby on Railsメインに、Git, JavaScripts等<br>
                   6月19日〜現在: Ruby on Rails、PHP、インフラを学習中<br>
-                  学習しなかった日は６日で、<b>ほぼ毎日学習を継続しております。</b>
+                  <!-- 学習しなかった日は６日で、<b>ほぼ毎日学習を継続しております。</b> -->
                 </p>
                 <br>
                 <h3>どのようなエンジニアになりたいか</h3>
